longhorn/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.myhomelab.fr`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
  tls:
    secretName: myhomelab-fr-productions-tls
